--- a/Ruby-China-iOS/Podfile
+++ b/Ruby-China-iOS/Podfile
@@ -3,3 +3,4 @@ platform :ios, "7.0"
 pod 'AFNetworking', "~> 2.0"
 pod 'SDWebImage', '~> 3.5'
 pod 'DTCoreText', '~> 1.6.8'
+pod 'SVProgressHUD', '~> 1.0'
