--- a/Ruby-China-iOS/Podfile
+++ b/Ruby-China-iOS/Podfile
@@ -4,3 +4,4 @@ pod 'AFNetworking', "~> 2.0"
 pod 'SDWebImage', '~> 3.5'
 pod 'DTCoreText', '~> 1.6.8'
 pod 'SVProgressHUD', '~> 1.0'
+pod 'SVPullToRefresh', '~> 0.4.1'
