--- a/Ruby-China-iOS/Podfile
+++ b/Ruby-China-iOS/Podfile
@@ -5,3 +5,4 @@ pod 'SDWebImage', '~> 3.5'
 pod 'DTCoreText', '~> 1.6.8'
 pod 'SVProgressHUD', '~> 1.0'
 pod 'SVPullToRefresh', '~> 0.4.1'
+pod 'MagicalRecord', '~> 2.2'
